# EigenH5

./: .Rbuildignore  .dir-locals.el  .gitignore  .projectile  CMakeLists.txt  DESCRIPTION  Makefile  NAMESPACE  README.md  cleanup  configure  configure.ac
.github/workflows/: R-CMD-check.yaml
R/: R6.R  RcppExports.R  catch-routine-registration.R  chunk_reader_writer.R  future.R  h5_obj.R  read_write.R  utils.R  zzz.R
inst/cmake/Modules/: FindCBLOSC.cmake  FindRPackage.cmake  FindZSTD.cmake
inst/include/: EigenH5.h  EigenH5_RcppExports.h  path.hpp  rcpp_helpers.hpp  sexp_io.hpp  utils.hpp
inst/include/eigenh5/: ChunkSelector.hpp  H5classes.h  Interval.hpp  MatSlices.hpp  MatSlices.hpp~  Matrix.hpp  Selection.hpp  Singleton.hpp  indexers.hpp
inst/include/highfive/: #H5Filter.hpp#  EigenUtils.hpp  H5Attribute.hpp  H5DataSet.hpp  H5DataSpace.hpp  H5DataType.hpp  H5Exception.hpp  H5File.hpp  H5FileDriver.hpp  H5Filter.hpp  H5Group.hpp  H5Object.hpp  H5PropertyList.hpp  H5Selection.hpp  H5Utility.hpp  HighFive.hpp  highfive.hpp
inst/include/highfive/bits/: #H5Utils.hpp#  H5Annotate_traits.hpp  H5Annotate_traits_misc.hpp  H5Attribute_misc.hpp  H5Converter_misc.hpp  H5DataSet_misc.hpp  H5DataType_misc.hpp  H5Dataspace_misc.hpp  H5Exception_misc.hpp  H5FileDriver_misc.hpp  H5File_misc.hpp  H5Filter_misc.hpp  H5Iterables_misc.hpp  H5Node_traits.hpp  H5Node_traits_misc.hpp  H5Object_misc.hpp  H5PropertyList_misc.hpp  H5Selection_misc.hpp  H5Slice_traits.hpp  H5Slice_traits_misc.hpp  H5Utils.hpp
inst/include/lzf/: lzfP.h  lzf_filter.h
inst/include/path/: path.hpp
inst/include/range/v3/: #getlines.hpp#
inst/include/range/v3/utility/: random.hpp
inst/include/range/v3/view/: transpose.hpp~
inst/include/rutils/: rutils.hpp
inst/include/zstd/: zstd_h5plugin.h
inst/m4/: ax_lib_hdf5.m4  hh_hdf5rlib.m4
man/: EigenH5-package.Rd  delim2h5.Rd  rle2offset.Rd
src/: H5class.cpp  Makevars  Makevars.in  R6.cpp  RcppExports.cpp  Selection.cpp  altrep_methods.cpp  array.cpp  blosc_filter.c  blosc_filter.cpp  chunk_io.cpp  h5_mod.cpp  h5io.cpp  io.cpp  lzf_d.cpp  lzf_filter.cpp  lzf_z.cpp  matrix.cpp  path.cpp  rchunk.cpp  read_h5.cpp  sexp_io.cpp  sexp_utils.cpp  singleton.cpp  split_ld_region.cpp  test-dataqueue.cpp  test-dataset.cpp  test-dimrange.cpp  test-eigen.cpp  test-example.cpp  test-groups.cpp  utils.cpp  zstd_h5plugin.c
tests/: test_process.R  testthat.R
tests/testthat/: test-cpp.R  test_R6.R  test_attr.R  test_chunk.R  test_compression.R  test_df.R  test_future.R  test_h5.R  test_list.R  test_mat.R  test_util.R  test_vec.R
tools/: config.R  find_hdf5.R
tools/config/: configure.R
vignettes/: chunking.Rmd
